修改自定义配置

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -24,6 +24,9 @@ h1, h2, h3, h4, h5, h6 {
 }
 body {
     background-image: url('/images/background.jpg');
+    /*
+    background-image: url('/images/background11.png');
+    */
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
